backend/AAiT-backend-group-5/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
  labels:
    io.kompose.service: blog-app
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: blog-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: blog-app
    spec:
      containers:
        - name: blog-app
          image: solo1221/blog-app:v0.1
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
      restartPolicy: Always
