backend/AAiT-backend-group-5/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app
  labels:
    io.kompose.service: blog-app
spec:
  type: NodePort 
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: blog-app
