backend/AAiT-backend-group-5/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    io.kompose.service: redis
spec:
  type: NodePort  
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
