backend/AAiT-backend-group-5/k8s/app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network
spec:
  podSelector:
    matchLabels:
      io.kompose.network/app-network: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/app-network: "true"
